# psr-templates-fixture

./: .actrc  .gitignore  .pre-commit-config.yaml  ACT-GITEA-PLAN.md  CHANGELOG.md  CLEANUP-AND-REFACTOR-PLAN.md  DISCOVERY.md  Makefile  README.md  REVERT.md  TEMPLATE-RENDERING-TEST-PLAN.md  TODO.md  WORKFLOW-AUDIT.md  WORKFLOW-CONSOLIDATION-PLAN.md  addon.xml  pyproject.toml
.act/: event.json  hello-event.json  shell-event.json
.github/actions/build-kodi-zip/: action.yml
.github/actions/check-kodi-project/: action.yml
.github/actions/check-pre-cleanup/: action.yml
.github/actions/checkout-repos/: action.yml
.github/actions/cleanup-tags-releases/: action.yml
.github/actions/configure-git-push/: action.yml
.github/actions/consolidated-cleanup-tags-and-releases/: action.yml
.github/actions/consolidated-kodi-check/: action.yml
.github/actions/consolidated-kodi-publish/: action.yml
.github/actions/consolidated-kodi-publish-to-release/: action.yml
.github/actions/consolidated-kodi-zip/: action.yml
.github/actions/create-test-branch/: action.yml
.github/actions/generate-and-push-commits/: action.yml
.github/actions/hello-world/: action.yml
.github/actions/install-deps/: action.yml
.github/actions/install-dev-dependencies/: action.yml
.github/actions/install-dev-dependencies-base/: action.yml
.github/actions/install-dev-dependencies-full/: action.yml
.github/actions/install-dev-deps/: action.yml
.github/actions/install-uv/: action.yml
.github/actions/publish-kodi-zip/: action.yml
.github/actions/run-arranger/: action.yml
.github/actions/run-generate-commits/: action.yml
.github/actions/run-post-psr-tests/: action.yml
.github/actions/run-pre-psr-tests/: action.yml
.github/actions/run-psr/: action.yml
.github/actions/run-psr-locally/: action.yml
.github/actions/run-psr-phase/: action.yml
.github/actions/setup-dev-environment/: action.yml
.github/actions/setup-environment/: action.yml
.github/actions/setup-venv/: action.yml
.github/actions/test-hello/: action.yml
.github/prompts/: Refactor run-psr-phase.prompt.md  cleanup-robustness-implementation-plan.prompt.md  plan-runPsrPhaseCompositeRefactor.prompt.md
.github/workflows/: cleanup.yml  phase-config.json  run-psr-phase.yml  shell-test.yml  test-harness-act.yml  test-harness-consolidated copy.yml  test-harness-consolidated-with-gitea.yml  test-harness-consolidated.yml  test-harness-old.yml  test-harness.yml  test-hello.yml
fixture/kodi/script.module.example/: addon.xml
kodi-addon-fixture/: pyproject.toml
kodi-addon-fixture/script.module.example/: addon.xml
psr_templates_fixture.egg-info/: PKG-INFO  SOURCES.txt
pypi-fixture/: pyproject.toml
script.module.example/: addon.xml
script.module.example/resources/lib/: __init__.py  hello_world.py
templates/: CHANGELOG.md.j2
templates/script.module.example/: addon.xml.j2
tests/: conftest.py  test_helpers.py
tests/integration/: test_phases.py
tests/integration/post_psr/: test_multi_release.py  test_post_psr.py
tests/integration/pre_psr/: test_pre_psr.py
tools/: check_kodi.py  docker-gitea-start.sh  generate_commits.py  gitea-config-gen.sh  init-gitea.sh  populate-gitea.sh
