[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psr-templates-fixture"
version = "0.1.0"
description = "Fake Python project for testing PSR templates"
authors = [{name = "Test Author"}]
readme = "README.md"
requires-python = ">=3.8"

[tool.semantic_release]
version_toml = ["pyproject.toml", "project.version"]
branch = "main"
changelog = {template_dir = "templates", default_templates = {changelog_file = "CHANGELOG.md"}}
commit_parser = "angular"
tag_format = "v{version}"
major_on_zero = true
commit_author = "github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>"
commit_message = "chore: release v{version} [skip ci]"

[tool.arranger]
"templates/universal/CHANGELOG.md.j2" = "templates/CHANGELOG.md.j2"
"templates/kodi-addons/addon.xml.j2" = "kodi/script.module.example/addon.xml"