[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psr-templates-fixture"
version = "0.0.1"
description = "Fake Python project for testing PSR templates"
authors = [{name = "Test Author"}]
readme = "README.md"
requires-python = ">=3.8"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
template_dir = "templates"
commit_parser = "conventional"
tag_format = "v{version}"
allow_zero_version = true
major_on_zero = false
commit_author = "github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>"
commit_message = "chore: release v{version} [skip ci]"

# Explicitly define which commit types trigger version bumps
# perf is included in changelog (via news_types) but NOT in version bumps
[tool.semantic_release.commit_parser_options]
# Only these types trigger version bumps
minor_types = ["feat"]
patch_types = ["fix"]
prerelease_types = []

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.ci]
match = "ci/.*"
prerelease = false

[tool.psr-prepare.addon]
id = "script.module.example"
name = "Example Script Module"
provider-name = "Example Provider"
description = "A example script module for testing"
license = "GPL-2.0-only"

[[tool.psr-prepare.addon.requires]]
addon = "xbmc.python"
version = "3.0.0+"

[tool.psr-prepare.changelog]
file = "CHANGELOG.md"

# News type mappings: commit_type → label
# Maps PSR commit types to Kodi news labels for formatting
news_types = {feat = "new", fix = "fix", perf = "improved"}

[tool.arranger]
use-default-kodi-addon-structure = true
kodi-addon-directory = "script.module.example"
source-mappings = {}