[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kodi-addon-fixture"
version = "0.1.0"
description = "Fake Kodi addon project for testing PSR templates"
authors = [{name = "Test Author"}]
readme = "README.md"
requires-python = ">=3.8"

[tool.semantic_release]
version_toml = ["../pyproject.toml:project.version"]
template_dir = "templates"
changelog = {template_dir = "templates", default_templates = {changelog_file = "../CHANGELOG.md"}}
commit_parser = "conventional"
tag_format = "v{version}"
allow_zero_version = true
major_on_zero = false
commit_author = "github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>"
commit_message = "chore: release v{version} [skip ci]"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.ci]
match = "ci/.*"
prerelease = false

[tool.arranger]
use-default-kodi-addon-structure = true
kodi-project-name = "script.module.example"
source-mappings = {}