[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "example-pypi-package"
version = "0.1.0"
description = "Example PyPI package for PSR testing"
authors = [{name = "Test Author"}]
readme = "README.md"
requires-python = ">=3.8"

[tool.semantic_release]
version_toml = "pyproject.toml:project.version"
branch = "main"
changelog = {template_dir = "templates", default_templates = {changelog_file = "CHANGELOG.md"}}
commit_parser = "angular"
tag_format = "v{version}"
major_on_zero = true